<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/username_field"
        android:hint="username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/username_field"
        android:layout_alignEnd="@+id/username_field"
        android:id="@+id/password_field"
        android:hint="password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/password_field"
        android:layout_alignStart="@+id/password_field"
        android:id="@+id/email_field"
        android:hint="email" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_button" />

    <TextView
        android:text="Create an account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username_field"
        android:layout_centerHorizontal="true"
        android:id="@+id/register_title"
        android:paddingBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="Party Playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_title"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:paddingBottom="20dp" />

    <TextView
        android:text="Existing user? Login here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/to_loginpage"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="callLoginView" />

</RelativeLayout>
