...
        android:layout_below="@+id/password_field"
        android:layout_alignStart="@+id/password_field"
        android:id="@+id/email_field"
        android:hint="email" />

    <Button
        android:text="LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_button"
        android:onClick="loginUser"/>
...
